# authd

./: .gitignore  ChangeLog  INSTALL  Makefile.am  Protocol  README  README.md  README.utf8  authd.c  authd.h  authd.service  check_auth.c  check_auth.h  check_auth_bystr.c  check_auth_bystr.h  config.h.in  config.sh  configure.ac  pam_jbxl_auth.c  pam_jbxl_auth.h  pam_tuis_auth.c  pam_tuis_auth.h
conf/: authd.allow.sample  authd.init  dhkey.sample
moodle_auth/jbxl/: auth.php  config.html  version.php
moodle_auth/jbxl/lang/en/: auth_jbxl.php
moodle_auth/tuis/: auth.php  version.php
moodle_auth/tuis/lang/en/: auth_tuis.php
moodle_auth/tuis/lang/ja/: auth_tuis.php
perl/: Makefile  check_auth.pl
perl/perl_jbxl_auth/: Changes  MANIFEST  Makefile.PL  README  perl_jbxl_auth.xs  ppport.h
perl/perl_jbxl_auth/lib/: perl_jbxl_auth.pm
perl/perl_jbxl_auth/t/: perl_jbxl_auth.t
perl/perl_tuis_auth/: Changes  MANIFEST  Makefile.PL  README  perl_tuis_auth.xs  ppport.h
perl/perl_tuis_auth/lib/: perl_tuis_auth.pm
perl/perl_tuis_auth/t/: perl_tuis_auth.t
php/: Makefile.am  check_auth.php  php_jbxl_auth.c  php_tuis_auth.c
php_tools/Moodle-1.7/auth/tuis_auth/: config.html  lib.php
php_tools/Moodle-1.7/lang/en_utf8/: auth.php
php_tools/Moodle-1.7/lang/ja_utf8/: auth.php
php_tools/Moodle-1.9/auth/tuis_auth/: auth.php  config.html
php_tools/Moodle-1.9/lang/en_utf8/: auth.php  auth_jbxl.php  auth_tuis.php
php_tools/Moodle-1.9/lang/ja_utf8/: auth.php  auth_jbxl.php  auth_tuis.php
php_tools/Moodle-2.2/auth/email/: auth.php
php_tools/Moodle-2.2/auth/tuis_auth/: auth.php  config.html  version.php
php_tools/Moodle-2.2/auth/tuis_auth/lang/en/: auth_tuis_auth.php
php_tools/Moodle-2.2/auth/tuis_auth/lang/ja/: auth_tuis_auth.php
php_tools/Moodle-2.4/auth/email/: auth.php
php_tools/Moodle-2.4/auth/jbxl/: auth.php  config.html  version.php
php_tools/Moodle-2.4/auth/jbxl/lang/en/: auth_jbxl.php
php_tools/Moodle-2.4/auth/jbxl/lang/ja/: auth_jbxl.php
php_tools/Moodle-2.4/auth/tuis/: auth.php  version.php
php_tools/Moodle-2.4/auth/tuis/lang/ja/: auth_tuis.php
php_tools/Wordpress/jbxl_auth/: jbxl_auth.php  jbxl_auth_admin.php
php_tools/Wordpress/tuis_auth/: tuis_auth.php  tuis_auth_admin.php
php_tools/XoopsCube/: mainfile.php
php_tools/XoopsCube/modules/user/preload/: JBXLAuth.class.php  TuisAuth.class.php
